# nanocut-control

./: .clang-format  .gitignore  404.html  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  ROADMAP.md  compile_commands.json  index.html  mkdocs.yml  shell.nix
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  docs.yml
assets/: NanoCut.desktop  nanocut.rc
assets/dxfs/: .nc  7 No Text.dxf  LS Header Flange.dxf  Made in USA.dxf  kompassros.nc  palms.nc  wrench.dxf  wrench.nc
assets/themes/: catppuccin_mocha.json  chill_gray.json  dark.json  dracula.json  gruvbox_dark.json  ice.json  imgui_classic.json  kawasaki.json  light.json  midnight_blue.json  monokai.json  nord.json  one_dark.json  retro_clean.json  solarized_dark.json  tokyo_night.json  vaporwave.json
building-your-machine/: index.html
cam-view/: index.html
cmake/: EmbedResource.cmake
control-view/: index.html
docs/: building-your-machine.md  cam-view.md  control-view.md  getting-started.md  index.md  installation.md  keyboard-shortcuts.md  machine-parameters.md
ext/dxflib/: dl_dxf.cpp
extra/: NanoCut.desktop  config.txt  windows_setup.bat  wrench.nc
extras/: machine_parameters.json
getting-started/: index.html
include/: config.h
installation/: index.html
keyboard-shortcuts/: index.html
machine-parameters/: index.html
scripts/: analyze_themes.py  build-windows.ps1  feather_logo.py  generate_headers.sh  generate_theme.py  img-to-gif.sh
search/: search_index.json
src/: NanoCut.h  application.h  main.cpp
src/EasyRender/: EasyRender.cpp  EasyRender.h
src/EasyRender/geometry/: clipper.cpp  clipper.h  geometry.cpp  geometry.h
src/EasyRender/json/: json.h
src/EasyRender/logging/: loguru.cpp
src/EasyRender/primatives/: PrimativeContainer.cpp  PrimativeContainer.h  PrimativeProperties.h
src/EasyRender/primatives/Arc/: Arc.cpp  Arc.h
src/EasyRender/primatives/Box/: Box.cpp  Box.h
src/EasyRender/primatives/Circle/: Circle.cpp  Circle.h
src/EasyRender/primatives/Image/: Image.cpp  Image.h
src/EasyRender/primatives/Line/: Line.cpp  Line.h
src/EasyRender/primatives/Part/: Part.cpp  Part.h
src/EasyRender/primatives/Path/: Path.cpp  Path.h
src/EasyRender/primatives/Text/: Text.cpp  Text.h
src/EasyRender/primitives/: PrimitiveContainer.cpp  PrimitiveContainer.h  PrimitiveProperties.h
src/EasyRender/primitives/Arc/: Arc.cpp  Arc.h
src/EasyRender/primitives/Box/: Box.cpp  Box.h
src/EasyRender/primitives/Circle/: Circle.cpp  Circle.h
src/EasyRender/primitives/Image/: Image.cpp  Image.h
src/EasyRender/primitives/Line/: Line.cpp  Line.h
src/EasyRender/primitives/Part/: Part.cpp  Part.h
src/EasyRender/primitives/Path/: Path.cpp  Path.h
src/EasyRender/primitives/Text/: Text.cpp  Text.h
src/Input/: InputState.h
src/NcAdminView/: NcAdminView.cpp  NcAdminView.h
src/NcApp/: NcApp.cpp  NcApp.h  View.cpp  View.h  stb_image_impl.cpp
src/NcApp/dialogs/: NcDialogs.cpp  NcDialogs.h
src/NcCamView/: NcCamView.cpp  NcCamView.h  PathImportCommon.cpp  PathImportCommon.h
src/NcCamView/DXFParsePathAdaptor/: DXFParsePathAdaptor.cpp  DXFParsePathAdaptor.h
src/NcCamView/PolyNest/: PolyNest.cpp  PolyNest.h
src/NcCamView/SvgParsePathAdaptor/: SvgParsePathAdaptor.cpp  SvgParsePathAdaptor.h
src/NcControlView/: NcControlView.cpp  NcControlView.h
src/NcControlView/dialogs/: dialogs.cpp  dialogs.h
src/NcControlView/gcode/: gcode.cpp  gcode.h
src/NcControlView/hmi/: hmi.cpp  hmi.h
src/NcControlView/motion_control/: motion_controller.cpp  motion_controller.h
src/NcControlView/serial/: NcSerial.cpp  NcSerial.h
src/NcControlView/serial/serial/: serial.cpp
src/NcControlView/serial/serial/impl/: win.h
src/NcRender/: NcRender.cpp  NcRender.h  gl.h
src/NcRender/geometry/: clipper.cpp  geometry.cpp  geometry.h
src/NcRender/gui/: imgui_widgets.cpp
src/NcRender/primitives/: Primitive.h  Primitives.h
src/NcRender/primitives/Arc/: Arc.cpp  Arc.h
src/NcRender/primitives/Box/: Box.cpp  Box.h
src/NcRender/primitives/Circle/: Circle.cpp  Circle.h
src/NcRender/primitives/Image/: Image.cpp  Image.h
src/NcRender/primitives/Line/: Line.cpp  Line.h
src/NcRender/primitives/Part/: Part.cpp  Part.h
src/NcRender/primitives/Path/: Path.cpp  Path.h
src/NcRender/primitives/Text/: Text.cpp  Text.h
src/ThemeManager/: ThemeColor.h  ThemeManager.cpp  ThemeManager.h
src/WebsocketClient/: WebsocketClient.cpp  WebsocketClient.h
src/WebsocketServer/: WebsocketServer.cpp  WebsocketServer.h
src/adminView/: adminView.cpp  adminView.h
src/application/: NcApp.cpp  NcApp.h  View.cpp  View.h
src/dxf/spline/: Curve.h  Vector.cpp
src/input/: InputEvents.h  InputState.cpp
src/jetCadView/DXFParseAdaptor/: DXFParseAdaptor.cpp  DXFParseAdaptor.h
src/jetCamView/: jetCamView.cpp  jetCamView.h
src/jetCamView/DXFParsePathAdaptor/: DXFParsePathAdaptor.cpp  DXFParsePathAdaptor.h
src/jetCamView/PolyNest/: PolyNest.cpp  PolyNest.h
src/mongoose/: mongoose.cpp  mongoose.h
src/ncControlView/: ncControlView.cpp  ncControlView.h  util.cpp  util.h
src/ncControlView/dialogs/: dialogs.cpp  dialogs.h
src/ncControlView/easy_serial/: easy_serial.cpp  easy_serial.h
src/ncControlView/gcode/: gcode.cpp  gcode.h
src/ncControlView/hmi/: hmi.cpp  hmi.h
src/ncControlView/menu_bar/: menu_bar.cpp  menu_bar.h
src/ncControlView/motion_control/: motion_control.cpp  motion_control.h
src/ncControlView/serial/: serial.h
src/ncControlView/serial/impl/: unix.cpp  unix.h  win.cpp
src/ncControlView/serial/impl/list_ports/: list_ports_linux.cpp  list_ports_osx.cpp  list_ports_win.cpp
src/ncControlView/stk500/: stk500.cpp  stk500.h
src/ncControlView/stk500/hex/: hex.cpp  hex.h
src/pch/: nanocut_128_png.h  nanocut_256_png.h  nanocut_64_png.h
test/: Carrier.dxf  flag.nc
